# gitpod-workspace-emacs-nw

./: .dockerignore  .gitpod.yml  Dockerfile  LICENSE  README.md  default.bash_aliases  deps.opam  docker_entrypoint.sh  prepare-gitpod.sh  setup.sh
.github/workflows/: docker-push.yml  emacs-push.yml
docs/: index.md
